--- a/examples/two_locals/spec.yml
+++ b/examples/two_locals/spec.yml
@@ -17,6 +17,7 @@ experiments:
 - name: Experiment 2
   description: Example experiment 2
   commands:
+    # Execute the commands in order
     run:
     - "echo Running experiment 2"
     - "date > examples/two_locals/exp2.log"
@@ -25,16 +26,19 @@ experiments:
 
 - name: Experiment 3
   description: Example experiment 3
+  requirements:
+    run:
+    # Requires CPU usage on the server to be >= 0 (The default requirement
+    # command is in training_noodles/specs/defaults.yml)
+    - cpu_usage: ">=0"
   commands:
+    # Execute the commands in order
     run:
     - "echo Running experiment 3"
     - "cd examples/two_locals"
     - "date > exp3.log"
     - "echo The hostname is $(hostname)"
     - "echo The time now is $(date)"
-  requirements:
-    run:
-    - cpu_usage: ">=0"
 
 ################################################################################
 # Servers
