can write outputs to files

--- a/training_noodles/specs/defaults.yml
+++ b/training_noodles/specs/defaults.yml
@@ -20,6 +20,7 @@ experiment_default:
   depends_on: {}
   requirements: {}
   commands: {}
+  write_outputs: {}
 
 # The main experiments
 experiments: []
