--- a/examples/train_tensorflow_examples/spec.yml
+++ b/examples/train_tensorflow_examples/spec.yml
@@ -23,6 +23,7 @@ experiments:
     TF_EXAMPLE_URL: https://github.com/aymericdamien/TensorFlow-Examples.git
     CONDA_DIR: $HOME/anaconda3
     CONDA_ENV_NAME: noodles_test
+    LOCAL_DIR: examples/train_tensorflow_examples/
   requirements:
     run:
     - has_lock_file: "==No"
@@ -40,6 +41,10 @@ experiments:
     # Create a new conda environment
     - "echo Creating conda environment $CONDA_ENV_NAME on $NOODLES_SERVER_NAME"
     - "$CONDA_DIR/bin/conda create -y -n $CONDA_ENV_NAME python=3.6"
+  write_outputs:
+    run:
+      stdout_to: '$LOCAL_DIR/phase1_exp1.stdout.log'
+      stderr_to: '$LOCAL_DIR/phase1_exp1.stderr.log'
 
 - name: Initialize server for Experiment 2
   description: Mark the server by a unique file name and download TensorFlow-Examples on the server
@@ -49,6 +54,7 @@ experiments:
     TF_EXAMPLE_URL: https://github.com/aymericdamien/TensorFlow-Examples.git
     CONDA_DIR: $HOME/anaconda3
     CONDA_ENV_NAME: noodles_test
+    LOCAL_DIR: examples/train_tensorflow_examples/
   requirements:
     run:
     - has_lock_file: "==No"
@@ -66,6 +72,10 @@ experiments:
     # Create a new conda environment
     - "echo Creating conda environment $CONDA_ENV_NAME on $NOODLES_SERVER_NAME"
     - "$CONDA_DIR/bin/conda create -y -n $CONDA_ENV_NAME python=3.6"
+  write_outputs:
+    run:
+      stdout_to: '$LOCAL_DIR/phase1_exp2.stdout.log'
+      stderr_to: '$LOCAL_DIR/phase1_exp2.stderr.log'
 
 - name: Initialize server for Experiment 3
   description: Mark the server by a unique file name and download TensorFlow-Examples on the server
@@ -75,6 +85,7 @@ experiments:
     TF_EXAMPLE_URL: https://github.com/aymericdamien/TensorFlow-Examples.git
     CONDA_DIR: $HOME/anaconda3
     CONDA_ENV_NAME: noodles_test
+    LOCAL_DIR: examples/train_tensorflow_examples/
   requirements:
     run:
     - has_lock_file: "==No"
@@ -92,6 +103,10 @@ experiments:
     # Create a new conda environment
     - "echo Creating conda environment $CONDA_ENV_NAME on $NOODLES_SERVER_NAME"
     - "$CONDA_DIR/bin/conda create -y -n $CONDA_ENV_NAME python=3.6"
+  write_outputs:
+    run:
+      stdout_to: '$LOCAL_DIR/phase1_exp3.stdout.log'
+      stderr_to: '$LOCAL_DIR/phase1_exp3.stderr.log'
 
 ### 2nd Phase: Run Experiments ###
 
@@ -105,6 +120,7 @@ experiments:
     EXPERIMENT_PATH: $HOME/TensorFlow-Examples/examples/1_Introduction/basic_operations.py
     STDOUT_PATH: $HOME/exp1.stdout.log
     STDERR_PATH: $HOME/exp1.stderr.log
+    LOCAL_DIR: examples/train_tensorflow_examples/
   depends_on:
     run:
     - Initialize server for Experiment 1
@@ -123,6 +139,10 @@ experiments:
       - "echo Running TensorFlow example on $NOODLES_SERVER_NAME"
       - |-
         tmux new -d -s "$TMUX_SESSION_NAME" "python $EXPERIMENT_PATH > $STDOUT_PATH 2> $STDERR_PATH"
+  write_outputs:
+    run:
+      stdout_to: '$LOCAL_DIR/phase2_exp1.stdout.log'
+      stderr_to: '$LOCAL_DIR/phase2_exp1.stderr.log'
 
 - name: Run experiment 2
   description: Run experiment on server
@@ -134,6 +154,7 @@ experiments:
     EXPERIMENT_PATH: $HOME/TensorFlow-Examples/examples/2_BasicModels/logistic_regression.py
     STDOUT_PATH: $HOME/exp2.stdout.log
     STDERR_PATH: $HOME/exp2.stderr.log
+    LOCAL_DIR: examples/train_tensorflow_examples/
   depends_on:
     run:
     - Initialize server for Experiment 2
@@ -152,6 +173,10 @@ experiments:
       - "echo Running TensorFlow example on $NOODLES_SERVER_NAME"
       - |-
         tmux new -d -s "$TMUX_SESSION_NAME" "python $EXPERIMENT_PATH > $STDOUT_PATH 2> $STDERR_PATH"
+  write_outputs:
+    run:
+      stdout_to: '$LOCAL_DIR/phase2_exp2.stdout.log'
+      stderr_to: '$LOCAL_DIR/phase2_exp2.stderr.log'
 
 - name: Run experiment 3
   description: Run experiment on server
@@ -163,6 +188,7 @@ experiments:
     EXPERIMENT_PATH: $HOME/TensorFlow-Examples/examples/3_NeuralNetworks/neural_network.py
     STDOUT_PATH: $HOME/exp3.stdout.log
     STDERR_PATH: $HOME/exp3.stderr.log
+    LOCAL_DIR: examples/train_tensorflow_examples/
   depends_on:
     run:
     - Initialize server for Experiment 3
@@ -181,6 +207,10 @@ experiments:
       - "echo Running TensorFlow example on $NOODLES_SERVER_NAME"
       - |-
         tmux new -d -s "$TMUX_SESSION_NAME" "python $EXPERIMENT_PATH > $STDOUT_PATH 2> $STDERR_PATH"
+  write_outputs:
+    run:
+      stdout_to: '$LOCAL_DIR/phase2_exp3.stdout.log'
+      stderr_to: '$LOCAL_DIR/phase2_exp3.stderr.log'
 
 ### 3rd Phase: Download Experimental Results ###
 
@@ -210,6 +240,10 @@ experiments:
       local:scp $NOODLES_SERVER_AUTHORITY:"$STDOUT_PATH $STDERR_PATH" $LOCAL_DIR
     # Remove the lock file
     - "rm -f $LOCK_FILE_PATH"
+  write_outputs:
+    run:
+      stdout_to: '$LOCAL_DIR/phase3_exp1.stdout.log'
+      stderr_to: '$LOCAL_DIR/phase3_exp1.stderr.log'
 
 - name: Download experimental results 2
   description: Download experimental results from server
@@ -237,6 +271,10 @@ experiments:
       local:scp $NOODLES_SERVER_AUTHORITY:"$STDOUT_PATH $STDERR_PATH" $LOCAL_DIR
     # Remove the lock file
     - "rm -f $LOCK_FILE_PATH"
+  write_outputs:
+    run:
+      stdout_to: '$LOCAL_DIR/phase3_exp2.stdout.log'
+      stderr_to: '$LOCAL_DIR/phase3_exp2.stderr.log'
 
 - name: Download experimental results 3
   description: Download experimental results from server
@@ -264,6 +302,10 @@ experiments:
       local:scp $NOODLES_SERVER_AUTHORITY:"$STDOUT_PATH $STDERR_PATH" $LOCAL_DIR
     # Remove the lock file
     - "rm -f $LOCK_FILE_PATH"
+  write_outputs:
+    run:
+      stdout_to: '$LOCAL_DIR/phase3_exp3.stdout.log'
+      stderr_to: '$LOCAL_DIR/phase3_exp3.stderr.log'
 
 ################################################################################
 # Servers
