add experiment name in envs

--- a/examples/error_handling/spec.yml
+++ b/examples/error_handling/spec.yml
@@ -8,6 +8,7 @@ description: Show the ability to handle various kinds of errors
 # Experiments
 ################################################################################
 
+# The main experiments
 experiments:
 - name: Experiment 1
   description: Example experiment 1
