--- a/examples/two_locals/clean.yml
+++ b/examples/two_locals/clean.yml
@@ -8,6 +8,7 @@ description: Clean the logs produced by "run" experiments
 # Experiments
 ################################################################################
 
+# The main experiments
 experiments:
 - name: Clean
   description: Clean the logs
