--- a/examples/two_servers_same_user/clean.yml
+++ b/examples/two_servers_same_user/clean.yml
@@ -8,8 +8,8 @@ description: Clean the logs produced by "run" experiments
 # Experiments
 ################################################################################
 
-experiments:
-- name: Clean one of the server (1)
+# The default properties for each experiment
+experiment_default:
   description: Clean the logs
   commands:
     clean:
@@ -18,14 +18,10 @@ experiments:
       - "rm -f ~/exp2.log"
       - "rm -f ~/exp3.log"
 
+# The main experiments
+experiments:
+- name: Clean one of the server (1)
 - name: Clean one of the server (2)
-  description: Clean the logs
-  commands:
-    clean:
-      - "echo Cleaning logs"
-      - "rm -f ~/exp1.log"
-      - "rm -f ~/exp2.log"
-      - "rm -f ~/exp3.log"
 
 ################################################################################
 # Servers
