--- a/examples/two_servers_same_user/spec.yml
+++ b/examples/two_servers_same_user/spec.yml
@@ -8,6 +8,7 @@ description: Run commands on two servers with same user
 # Experiments
 ################################################################################
 
+# The main experiments
 experiments:
 - name: Experiment 1
   description: Example experiment 1
