--- a/examples/error_handling/spec.yml
+++ b/examples/error_handling/spec.yml
@@ -8,6 +8,11 @@ description: Show the ability to handle various kinds of errors
 # Experiments
 ################################################################################
 
+# The default properties for each experiment
+experiment_default:
+  envs:
+    LOCAL_DIR: examples/error_handling
+
 # The main experiments
 experiments:
 - name: Experiment 1
@@ -46,6 +51,11 @@ servers:
 ################################################################################
 # Deployment
 ################################################################################
+
+# Path in each command type, as a string for Noodles to write the current
+# deployment status to the file in each deployment round
+write_status_to:
+  run: $LOCAL_DIR/noodles_status.yml
 
 # The interval to run each deployment round
 round_interval: 0
